Fix features dark mode

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -47,6 +47,7 @@
   align-items: center;
   width: 100%;
   background-color: #f6f6f6;
+  color: #1f2227;
 }
 
 .featureImage {
